2005-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Font/decode.java: New tests.
	* gnu/testlet/java/util/StringTokenizer.java: New tests.
	
2005-03-03  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/io/DataInputStream/readLine.java:
	Restructured and added more tests.

2005-03-03  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/InheritableThreadLocal/simple.java: New test.

2005-03-02  Daniel Bonniot  <bonniot@users.sf.net>

	* gnu/testlet/java/io/Serializable/ParentReadResolve.java: New test.
	* gnu/testlet/java/io/Serializable/ParentWriteReplace.java: New test.

2005-03-01  Ito Kazumitsu  <kaz@maczuka.gcd.org>

    * gnu/testlet/java/text/DecimalFormat/parse.java: New test cases.

2005-02-27  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/java/util/TreeSet/basic.java: New test.

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JTextArea/text.java: New test case.
    * gnu/testlet/javax/swing/JTextArea/gettingText.java: New test.    

2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JFrame/paint5.java: New test.
	
2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/Timer/preparatory.java: New test.
	* gnu/testlet/javax/swing/Timer/basic.java: New test.
	
2005-02-23  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JComboBox/basic.java: New test.
	* gnu/testlet/javax/swing/JComboBox/listenerList.java: New test.
	
2005-02-22  Audrius Meskauskas  <audriusa@bluewin.ch>

    * gnu/testlet/javax/swing/JToggleButton/click.java: New test.

2005-02-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/Component/clickModifiers.java: New test.

2005-02-21  Audrius Meskauskas  <audriusa@bluewin.ch>

    gnu/testlet/javax/swing/JTextArea/text.java: new test

2005-02-21  Bryce McKinlay  <mckinlay@redhat.com>
